--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "files": [
     ".github/workflows/mlops-pipeline.yml",
     "configs/",
-    "dvc.yaml",
+    "dvc-opensource.yaml",
     "dvclive/",
     "LICENSE",
     "notebooks/",
