--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - "configs/**"
-      - "dvc-opensource.yaml"
+      - "dvc.yaml"
       - "dvclive/**"
       - "LICENSE"
       - "notebooks/**"
