--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -6,23 +6,27 @@ on:
       - main
     paths:
       - ".github/workflows/mlops-pipeline.yml"
-      - "v/**"
-      - "dvc.lock"
-      - "dvc.yaml"
-      - "params.yaml"
-      - "requirements-pipeline.txt"
-      - "src/**"
+      - "pipeline-opensource/conf/**"
+      - "pipeline-opensource/dvc.lock"
+      - "pipeline-opensource/dvc.yaml"
+      - "pipeline-opensource/params.yaml"
+      - "pipeline-opensource/requirements.txt"
+      - "pipeline-opensource/data/**"
+      - "pipeline-opensource/models/**"
+      - "pipeline-opensource/scripts/**"
   pull_request:
     branches:
       - main
     paths:
       - ".github/workflows/mlops-pipeline.yml"
-      - "configs/**"
-      - "dvc.lock"
-      - "dvc.yaml"
-      - "params.yaml"
-      - "requirements-pipeline.txt"
-      - "src/**"
+      - "pipeline-opensource/conf/**"
+      - "pipeline-opensource/dvc.lock"
+      - "pipeline-opensource/dvc.yaml"
+      - "pipeline-opensource/params.yaml"
+      - "pipeline-opensource/requirements.txt"
+      - "pipeline-opensource/data/**"
+      - "pipeline-opensource/models/**"
+      - "pipeline-opensource/scripts/**"
   workflow_dispatch:
 
 concurrency:
@@ -46,12 +50,12 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
         with:
           fetch-depth: 0
 
       - name: Cache Apt Packages
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4.1.1
         with:
           path: /var/cache/apt/archives/**.deb
           key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/mlops-pipeline.yml') }}
@@ -64,17 +68,18 @@ jobs:
           python-version: "3.11"
 
       - name: Cache Python Dependencies
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4.1.1
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/mlops-pipeline.yml') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('pipeline-opensource/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install Python Dependencies
+        working-directory: pipeline-opensource
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-pipeline.txt
+          pip install -r requirements.txt
 
       - name: Set up Continuous Machine Learning (CML)
         uses: iterative/setup-cml@f12ea7685438c1fc438d50f77519b3860cf5fa98 # v2.0.1
@@ -83,8 +88,9 @@ jobs:
         uses: iterative/setup-dvc@2508d098217d24eef3c0e8d7bc0ce7b9ca0723c3 # v1.1.2
 
       - name: Configure DVC
+        working-directory: pipeline-opensource
         run: |
-          dvc init
+          dvc init --no-scm
           dvc config core.analytics false
           dvc config core.autostage true
           dvc config hydra.enabled true
@@ -96,21 +102,24 @@ jobs:
           dvc remote list
 
       - name: Cache DVC Directory
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4.1.1
         with:
-          path: .dvc/cache
-          key: ${{ runner.os }}-dvc-cache-${{ hashFiles('dvc.lock') }}
+          path: pipeline-opensource/.dvc/cache
+          key: ${{ runner.os }}-dvc-cache-${{ hashFiles('pipeline-opensource/dvc.lock') }}
           restore-keys: |
             ${{ runner.os }}-dvc-cache-
 
       - name: Pull from DVC remotes
+        working-directory: pipeline-opensource
         run: dvc pull
 
       - name: Run DVC pipeline
+        working-directory: pipeline-opensource
         run: dvc repro
 
       - name: Push to DVC remotes
         if: always()
+        working-directory: pipeline-opensource
         run: dvc push
 
       - name: Configure Git
@@ -124,22 +133,14 @@ jobs:
         id: commit_and_push
         continue-on-error: true
         run: |
-          [ -f dvc.lock ] && git add dvc.lock
-          [ -d dvclive ] && git add dvclive
-          [ -d dvclive_evaluate ] && git add dvclive_evaluate
-          [ -f reports/metrics.json ] && git add reports/metrics.json
-
+          git add pipeline-opensource/dvc.lock
+          git add pipeline-opensource/dvclive/
+          git add pipeline-opensource/reports/
+          git add pipeline-opensource/metrics/
           if git diff --staged --quiet; then
             echo "No changes to commit"
             echo "CHANGED=false" >> $GITHUB_ENV
           else
-            git stash
-            git pull origin main
-            git stash pop
-            [ -f dvc.lock ] && git add dvc.lock
-            [ -d dvclive ] && git add dvclive
-            [ -d dvclive_evaluate ] && git add dvclive_evaluate
-            [ -f reports/metrics.json ] && git add reports/metrics.json
             git commit -m "Update DVC artifacts and metrics"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
