--- a/pipeline-opensource/dvclive/params.yaml
+++ b/pipeline-opensource/dvclive/params.yaml
@@ -1,5 +1,8 @@
-model_name: autogluon
-metrics_output_path: /home/user/project/pipeline-opensource/reports/metrics/autogluon_metrics.json
-test_data_path: /home/user/project/pipeline-opensource/data/processed/test.csv
-evaluation_date: '2024-10-19T05:31:20.426533'
+model: autogluon
+label: readmitted
+problem_type: binary
 dataset_version: v1.0
+autogluon_presets: best_quality
+autogluon_time_limit: 3600
+autogluon_verbosity: 2
+autogluon_gbm_num_boost_round: 100
