--- a/pipeline-opensource/models/autogluon/artifacts/params.yaml
+++ b/pipeline-opensource/models/autogluon/artifacts/params.yaml
@@ -1,6 +1,8 @@
-model_name: autogluon
-metrics_output_path: /home/user/project/pipeline-opensource/models/autogluon/artifacts/metrics.json
-test_data_path: 
-  /home/user/project/pipeline-opensource/models/autogluon/artifacts/preprocessed_test_data.csv
-evaluation_date: '2024-10-19T08:49:46.480079'
+model: autogluon
+label: readmitted
+problem_type: binary
 dataset_version: v1.0
+autogluon_presets: best_quality
+autogluon_time_limit: 3600
+autogluon_verbosity: 2
+autogluon_gbm_num_boost_round: 100
