--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -65,7 +65,8 @@ jobs:
         run: |
           source .venv/bin/activate
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install uv
+          uv pip install -r requirements.txt
 
       - name: Configure DVC
         working-directory: pipeline-opensource
