--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -79,36 +79,6 @@ stages:
     outs:
       - data/interim/data_featured.parquet
 
-  train_autogluon:
-    cmd: PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python .venv/bin/python models/autogluon/model.py
-    deps:
-      - models/autogluon/model.py
-      - data/interim/data_featured.parquet
-      - requirements-frozen.txt
-    outs:
-      - models/autogluon/artifacts/model/model_info.txt:
-          cache: true
-      - models/autogluon/artifacts/model/best_model_architecture.txt:
-          cache: true
-      - models/autogluon/artifacts/model/leaderboard.csv:
-          cache: true
-      - models/autogluon/artifacts/model/feature_importance.csv:
-          cache: true
-    metrics:
-      - models/autogluon/artifacts/metrics/metrics.json:
-          cache: false
-      - models/autogluon/artifacts/metrics/feature_importance.json:
-          cache: false
-    plots:
-      - models/autogluon/artifacts/plots/confusion_matrix.png:
-          cache: false
-      - models/autogluon/artifacts/plots/roc_curve.png:
-          cache: false
-      - models/autogluon/artifacts/plots/feature_importance.png:
-          cache: false
-      - models/autogluon/artifacts/plots/model_feature_importance.png:
-          cache: false
-
   train_logistic_regression:
     cmd: .venv/bin/python models/logistic_regression/model.py
     deps:
@@ -116,16 +86,16 @@ stages:
       - data/interim/data_featured.parquet
       - requirements-frozen.txt
     outs:
-      - models/logistic_regression/artifacts/model:
+      - models/logistic_regression/artifacts/model/model.joblib:
           cache: true
-      - models/logistic_regression/artifacts/model_summary.txt:
+      - models/logistic_regression/artifacts/model/model_summary.txt:
           cache: true
-      - models/logistic_regression/artifacts/scaler.joblib:
+      - models/logistic_regression/artifacts/model/scaler.joblib:
           cache: true
     metrics:
       - models/logistic_regression/artifacts/metrics/metrics.json:
           cache: false
-      - models/logistic_regression/artifacts/metrics/feature_importance.json:
+      - models/logistic_regression/artifacts/metrics/feature_importance.csv:
           cache: false
     plots:
       - models/logistic_regression/artifacts/plots/confusion_matrix.png:
@@ -142,11 +112,11 @@ stages:
       - data/interim/data_featured.parquet
       - requirements-frozen.txt
     outs:
-      - models/neural_network/artifacts/model:
+      - models/neural_network/artifacts/model/model.h5:
           cache: true
-      - models/neural_network/artifacts/model_summary.txt:
+      - models/neural_network/artifacts/model/model_summary.txt:
           cache: true
-      - models/neural_network/artifacts/scaler.joblib:
+      - models/neural_network/artifacts/model/scaler.joblib:
           cache: true
     metrics:
       - models/neural_network/artifacts/metrics/metrics.json:
@@ -159,6 +129,38 @@ stages:
       - models/neural_network/artifacts/plots/roc_curve.png:
           cache: false
       - models/neural_network/artifacts/plots/model_architecture.png:
+          cache: false
+
+  train_autogluon:
+    cmd: PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python .venv/bin/python models/autogluon/model.py
+    deps:
+      - models/autogluon/model.py
+      - data/interim/data_featured.parquet
+      - requirements-frozen.txt
+    outs:
+      - models/autogluon/artifacts/model/model_info.txt:
+          cache: true
+      - models/autogluon/artifacts/model/best_model_architecture.txt:
+          cache: true
+      - models/autogluon/artifacts/model/leaderboard.csv:
+          cache: true
+      - models/autogluon/artifacts/model/feature_importance.csv:
+          cache: true
+      - models/autogluon/artifacts/plots/best_model_architecture.png:
+          cache: false
+    metrics:
+      - models/autogluon/artifacts/metrics/metrics.json:
+          cache: false
+      - models/autogluon/artifacts/metrics/feature_importance.json:
+          cache: false
+    plots:
+      - models/autogluon/artifacts/plots/confusion_matrix.png:
+          cache: false
+      - models/autogluon/artifacts/plots/roc_curve.png:
+          cache: false
+      - models/autogluon/artifacts/plots/feature_importance.png:
+          cache: false
+      - models/autogluon/artifacts/plots/model_feature_importance.png:
           cache: false
 
   visualize:
@@ -175,7 +177,19 @@ stages:
           cache: false
       - models/autogluon/artifacts/plots/shap_force_plot.png:
           cache: false
+      - models/autogluon/artifacts/plots/shap_summary.png:
+          cache: false
+      - models/autogluon/artifacts/plots/shap_importance.png:
+          cache: false
       - models/logistic_regression/artifacts/plots/shap_force_plot.png:
           cache: false
+      - models/logistic_regression/artifacts/plots/shap_summary.png:
+          cache: false
+      - models/logistic_regression/artifacts/plots/shap_importance.png:
+          cache: false
       - models/neural_network/artifacts/plots/shap_force_plot.png:
+          cache: false
+      - models/neural_network/artifacts/plots/shap_summary.png:
+          cache: false
+      - models/neural_network/artifacts/plots/shap_importance.png:
           cache: false
