--- a/templates/.env.template
+++ b/templates/.env.template
@@ -1,10 +1,33 @@
+#-------------------------------------------------------------------------------
+# AWS Credentials
+#-------------------------------------------------------------------------------
 AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
 AWS_REGION=
-AWS_SECRET_ACCESS_KEY=
-DATASETS_REMOTE=
+
+#-------------------------------------------------------------------------------
+# User & Security Settings
+#-------------------------------------------------------------------------------
+EMAILS=
+INITIAL_PASSWORD=
+GROUP_NAME=
+
+#-------------------------------------------------------------------------------
+# S3 Bucket Configuration
+#-------------------------------------------------------------------------------
+BUCKET_NAME=
+BUCKET_KEYS=
+
+#-------------------------------------------------------------------------------
+# DynamoDB Table Configuration
+#-------------------------------------------------------------------------------
+TABLE_NAME=
+
+#-------------------------------------------------------------------------------
+# Data Science & ML Platform Settings
+#-------------------------------------------------------------------------------
 DVC_STUDIO_TOKEN=
 GITHUB_TOKEN=
 HF_TOKEN=
-MODELS_REMOTE=
 OPENAI_API_KEY=
