--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -85,6 +85,18 @@ jobs:
 
       - name: Run DVC Pipeline
         working-directory: pipeline
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          DATASETS_REMOTE: ${{ secrets.DATASETS_REMOTE }}
+          MODELS_REMOTE: ${{ secrets.MODELS_REMOTE }}
+          EMAILS: ${{ secrets.EMAILS }}
+          INITIAL_PASSWORD: ${{ secrets.INITIAL_PASSWORD }}
+          GROUP_NAME: ${{ secrets.GROUP_NAME }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+          TABLE_NAME: ${{ secrets.TABLE_NAME }}
+          BUCKET_KEYS: ${{ secrets.BUCKET_KEYS }}
         run: |
           source .venv/bin/activate
           dvc repro -f
