--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -26,28 +26,20 @@ permissions:
 jobs:
   run-mlops-pipeline:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      DATASETS_REMOTE: ${{ secrets.DATASETS_REMOTE }}
-      DVC_STUDIO_TOKEN: ${{ secrets.DVC_STUDIO_TOKEN }}
-      MODELS_REMOTE: ${{ secrets.MODELS_REMOTE }}
-
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Cache Python Virtualenv
         id: cache-venv
-        uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4.1.1
+        uses: actions/cache@v3
         with:
           path: pipeline/.venv
           key: ${{ runner.os }}-venv-${{ hashFiles('pipeline/requirements.txt') }}
@@ -59,13 +51,13 @@ jobs:
         if: steps.cache-venv.outputs.cache-hit != 'true'
         run: |
           python3 -m venv .venv
+          pip install uv
 
       - name: Install Python Dependencies
         working-directory: pipeline
         run: |
           source .venv/bin/activate
-          python -m pip install --upgrade pip
-          python -m pip install uv
+          pip install --upgrade pip
           uv pip install -r requirements.txt
 
       - name: Configure DVC
@@ -134,7 +126,7 @@ jobs:
 
       - name: Repository Dispatch
         if: env.CHANGED == 'true'
-        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
+        uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
