--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -28,18 +28,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        uses: actions/setup-python@v5.3.0
         with:
           python-version: "3.11"
 
       - name: Cache Python Virtualenv
         id: cache-venv
-        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4.1.2
+        uses: actions/cache@v4.1.2
         with:
           path: pipeline/.venv
           key: ${{ runner.os }}-venv-${{ hashFiles('pipeline/requirements.txt') }}
@@ -69,10 +69,10 @@ jobs:
           dvc config core.autostage true
           dvc config hydra.enabled true
           dvc config studio.url https://studio.iterative.ai
-          dvc remote add -f datasets_remote $DATASETS_REMOTE -d
-          dvc remote add -f models_remote $MODELS_REMOTE
-          dvc remote modify datasets_remote region $AWS_DEFAULT_REGION
-          dvc remote modify models_remote region $AWS_DEFAULT_REGION
+          dvc remote add -f datasets_remote ${{ secrets.DATASETS_REMOTE }} -d
+          dvc remote add -f models_remote ${{ secrets.MODELS_REMOTE }}
+          dvc remote modify datasets_remote region ${{ secrets.AWS_DEFAULT_REGION }}
+          dvc remote modify models_remote region ${{ secrets.AWS_DEFAULT_REGION }}
           dvc remote list
 
       - name: Run DVC Pipeline
@@ -81,8 +81,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          DATASETS_REMOTE: ${{ secrets.DATASETS_REMOTE }}
-          MODELS_REMOTE: ${{ secrets.MODELS_REMOTE }}
           EMAILS: ${{ secrets.EMAILS }}
           INITIAL_PASSWORD: ${{ secrets.INITIAL_PASSWORD }}
           GROUP_NAME: ${{ secrets.GROUP_NAME }}
@@ -126,7 +124,7 @@ jobs:
 
       - name: Repository Dispatch
         if: env.CHANGED == 'true'
-        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
+        uses: peter-evans/repository-dispatch@v3.0.0
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
